# dFlow

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.md  build.sh  docker-compose.yml  env  requirements.txt  runtests.sh  setup.cfg  setup.py  start.sh
.github/workflows/: ci.yml
dflow/: README.md  __init__.py  definitions.py  dflow.tx  generator.py  intent_generator.py  language.py  openapi_to_dflow.py  utils.py
dflow/api/: api.py
dflow/cli/: cli.py
dflow/grammar/: auth.tx  connector.tx  dflow.tx  nluconfig.tx  types.tx  utils.tx
dflow/m2m/: openapi_to_dflow.py
dflow/rasa deployment/: Rasa Deployment.ipynb
dflow/templates/: config.yml.jinja  credentials.yml.jinja  dflow.jinja  domain.yml.jinja  model.dflow.jinja
dflow/templates/actions/: actions.py.jinja
dflow/templates/data/: rules.yml.jinja  stories.yml.jinja
dfsm/: __init__.py  dfsm.pu  dfsm.tx
dfsm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
examples/: README.md  complex.dflow  profile.dflow  simple.dflow  simple.dfsm  smart_home.dflow  template.dflow  weather.dflow  weather2.dflow  weather_ac.dflow
examples/llm_4_dflow/: ask_weather.dflow  ask_weather_ac.dflow  audiobook.dflow  book_appointment.dflow  book_appointment_ac.dflow  buy_amazon.dflow  descriptions.json  greet.dflow  log_food.dflow  main.py  open_window.dflow  remind_medicine.dflow  retrieve_steps.dflow  smart_car.dflow  take_notes.dflow  user_profile.dflow  user_profile_ac.dflow
examples/rbac/: audiobook.dflow  smart_home.dflow
examples/sities/: anekdoto.dflow  weather.dflow
examples/workshop/: hello_world.dflow  profile.dflow  weather.dflow
templates/: config.yml.jinja  domain.yml.jinja
templates/actions/: actions.py.jinja
templates/data/: nlu.yml.jinja  rules.yml.jinja  stories.yml.jinja
(+5 files in other folders)
