[metadata]
name = dflow
author = Konstantinos Panayiotou
author_email = klpanagi@gmail.com
license = MIT
description = Codin Textual DSL
keywords = dflow
url =
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Topic :: Software Development :: Interpreters
    Topic :: Software Development :: Compilers
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent

[options]
packages = dflow
zip_safe = False
include_package_data = True
package_dir =
    dflow = dflow

[options.extras_require]
dev =
    wheel
    twine
test =
    flake8
    tox
    coverage
    coveralls
    pytest

[options.entry_points]
textx_languages =
    dflow = dflow:dflow_language

textx_generators =
    dflow.rasa = dflow:dflow_generate_rasa

console_scripts =
    dflow = dflow.cli.cli:main

[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:comm_idl/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs .git/*, .eggs/*, .tox/*, build/*, dist/*, venv/*

[aliases]
# Define setup.py command aliases here

